    * Add a multi-instance web waypoint, use a reverse proxy to navigate to the correct instances
    * Automatically redirect from the multi-instance waypoint if exactly one printer is configured
    * Fix missing error detail pages
    * Fix an error when dosconnecting from a cammera that failed to connect
    * Fix an intermittent error that was killing instances for like two years

0.7.0 (2023-05-19)
    * Fixed printer sends info about api key change to Connect after change
    * Added the network error beep setting to the web API
    * Support renaming gcodes directory (cfg and API)
    * Added a multi-instace auto config and starter utility
    * Disable error beeps during prints
    * Static Web update
        - Using v1 endpoints for job and transfer
        - Creating and Deleting folders
        - Translation update
        - Network error chime control
        - Default storage names
        - Upgrade procedure rework

0.7.0rc3 (2023-03-09)
    * Added v1 endpoints for flat filesystem structure, old struct is moved to
      files_legacy file
    * Added api/v1/update/<env> GET endpoint
    * Printer name and location are added to register url as query parameters,
      if available
    * Static Web update
        - Apply UI/UX refactoring
        - Add support for max-age cache control
        - Add control of last-modified header for snapshots
        - Add drop zone to files storage
        - Remove manual camera connection dialog
        - Migrate to files api v1
        - PrusaLink update
    * Added Force header to api/v1/files/<storage>/<path> DELETE endpoint for
      deletion of non-empty folder
    * Changed Print-After-Upload header value check for PUT
    * Added endpoint to start printing file
    * Removed the original picamera driver
    * Raspberry Pi Camera support utilizing libcamera directly
    * Hardware encoding support. (Pi Zero W manages FullHD snapshots without issues)