@@ -11,6 +11,7 @@
     * Fix missing error detail pages
     * Fix an error when dosconnecting from a cammera that failed to connect
     * Fix an intermittent error that was killing instances for like two years
+    * Differentiate between multi instance printers by showing the printer number on the LCD screen
 
 0.7.0 (2023-05-19)
     * Fixed printer sends info about api key change to Connect after change
